--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Zaiyan Zhang"
+  name             : "Zaiyan Zhang (张再筵)"
   avatar           : "images/avatar.jpg"
   bio              : "China University of Geosciences"
   location         : "Wuhan, China"
