--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Zaiyan Zhang (张再筵)"
-  avatar           : "images/avatar.jpg"
+  name             : "Zaiyan Zhang"
+  name_zh          : "张再筵"
+  avatar           : "images/avatar-back.jpg"
   bio              : "China University of Geosciences"
   location         : "Wuhan, China"
   employer         :
