--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Zaiyan Zhang (张再筵)"
-  name_zh          : "张再筵"
+  # name_zh          : "张再筵"
   avatar           : "images/avatar-back.jpg"
   bio              : "China University of Geosciences"
   location         : "Wuhan, China"
