--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "Experience"
+    url: "/#-experience"
 
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
