--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,20 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
+  - title: "Experience"
+    url: "/#-experience"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Experience"
-    url: "/#-experience"
+  - title: "Publications"
+    url: "/#-publications"
 
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
   # - title: "Internships"
   #   url: "/#-internships"
+
+  - title: "Blog"
+    url: "https://b.zzaiyan.com"
