--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Zaiyan Zhang (张再筵)"
   # name_zh          : "张再筵"
   avatar           : "images/avatar.jpg"
-  bio              : "China University of Geosciences"
+  bio              : "Wuhan University"
   location         : "Wuhan, China"
   employer         :
   pubmed           : 
