--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Zaiyan Zhang"
-description              : "A student, focusing on Low-level Vision, Remote Sensing Image Processing, and Multimodal Data Fusion."
+description              : "A Research Beginner."
 repository               : "zzaiyan/zzaiyan.github.io"
 google_scholar_stats_use_cdn : true
 
