--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,8 @@ main:
   # - title: "Internships"
   #   url: "/#-internships"
 
+  - title: "Services"
+    url: "/#-services"
+
   - title: "Blog"
     url: "https://b.zzaiyan.com"
