refix some repo

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Experience"
-    url: "/#-experience"
+  - title: "Education"
+    url: "/#-education"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
