更新Last-update-date的后端：JS脚本->Jekyll插件，采用静态资源，避免频繁访问API

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ description              : "A Research Beginner."
 repository               : "zzaiyan/zzaiyan.github.io"
 google_scholar_stats_use_cdn : true
 
+plugins:
+  - jekyll-github-metadata
+
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
 
